traefik/external/proxmox/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: proxmox
spec:
  ports:
    - name: https
      port: 443
